fixed pro not showing in menus

--- a/controls/menu/menu.css
+++ b/controls/menu/menu.css
@@ -244,8 +244,8 @@
     background:     #1e1e1e;
     box-shadow:     0 0 0 1px #09f8 inset;
     margin-top:     1px;
-    padding-left:   7px;
-    padding-right:  7px;
+    padding-left:   5px;
+    padding-right:  5px;
     padding-top:    3px;
     padding-bottom: 2px;
     border-radius:  3px;
